
[TestParseExprNoErrors/StringLiteral - 1]
&parser.Expr{
    Kind: &parser.EString{Value:"hello"},
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:7},
    },
}
---

[TestParseExprNoErrors/AddSub - 1]
&parser.Expr{
    Kind: &parser.EBinary{
        Left: &parser.Expr{
            Kind: &parser.EBinary{
                Left: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"a"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:1},
                        End:   parser.Location{Line:1, Column:2},
                    },
                },
                Op:    1,
                Right: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"b"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:5},
                        End:   parser.Location{Line:1, Column:6},
                    },
                },
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:6},
            },
        },
        Op:    0,
        Right: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"c"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:9},
                End:   parser.Location{Line:1, Column:10},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:10},
    },
}
---

[TestParseExprNoErrors/IndexPrecedence - 1]
&parser.Expr{
    Kind: &parser.EBinary{
        Left: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"a"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:2},
            },
        },
        Op:    0,
        Right: &parser.Expr{
            Kind: &parser.EIndex{
                Object: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"b"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:5},
                        End:   parser.Location{Line:1, Column:6},
                    },
                },
                Index: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"c"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:7},
                        End:   parser.Location{Line:1, Column:8},
                    },
                },
                OptChain: false,
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:5},
                End:   parser.Location{Line:1, Column:9},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:9},
    },
}
---

[TestParseExprNoErrors/MultipleIndexes - 1]
&parser.Expr{
    Kind: &parser.EIndex{
        Object: &parser.Expr{
            Kind: &parser.EIndex{
                Object: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"a"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:1},
                        End:   parser.Location{Line:1, Column:2},
                    },
                },
                Index: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"i"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:3},
                        End:   parser.Location{Line:1, Column:4},
                    },
                },
                OptChain: false,
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:5},
            },
        },
        Index: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"j"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:6},
                End:   parser.Location{Line:1, Column:7},
            },
        },
        OptChain: false,
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:8},
    },
}
---

[TestParseExprNoErrors/OptChainIndex - 1]
&parser.Expr{
    Kind: &parser.EIndex{
        Object: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"a"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:2},
            },
        },
        Index: &parser.Expr{
            Kind: &parser.EBinary{
                Left: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"base"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:4},
                        End:   parser.Location{Line:1, Column:8},
                    },
                },
                Op:    0,
                Right: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"offset"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:11},
                        End:   parser.Location{Line:1, Column:17},
                    },
                },
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:4},
                End:   parser.Location{Line:1, Column:17},
            },
        },
        OptChain: true,
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:18},
    },
}
---

[TestParseExprNoErrors/MemberPrecedence - 1]
&parser.Expr{
    Kind: &parser.EBinary{
        Left: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"a"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:2},
            },
        },
        Op:    0,
        Right: &parser.Expr{
            Kind: &parser.EMember{
                Object: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"b"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:5},
                        End:   parser.Location{Line:1, Column:6},
                    },
                },
                Prop: &parser.Identifier{
                    Name: "c",
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:7},
                        End:   parser.Location{Line:1, Column:8},
                    },
                },
                OptChain: false,
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:5},
                End:   parser.Location{Line:1, Column:8},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:8},
    },
}
---

[TestParseExprNoErrors/Parens - 1]
&parser.Expr{
    Kind: &parser.EBinary{
        Left: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"a"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:2},
            },
        },
        Op:    2,
        Right: &parser.Expr{
            Kind: &parser.EBinary{
                Left: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"b"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:6},
                        End:   parser.Location{Line:1, Column:7},
                    },
                },
                Op:    0,
                Right: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"c"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:10},
                        End:   parser.Location{Line:1, Column:11},
                    },
                },
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:6},
                End:   parser.Location{Line:1, Column:11},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:11},
    },
}
---

[TestParseExprNoErrors/NumberLiteral - 1]
&parser.Expr{
    Kind: &parser.ENumber{Value:5},
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:2},
    },
}
---

[TestParseExprNoErrors/Index - 1]
&parser.Expr{
    Kind: &parser.EIndex{
        Object: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"a"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:2},
            },
        },
        Index: &parser.Expr{
            Kind: &parser.EBinary{
                Left: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"base"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:3},
                        End:   parser.Location{Line:1, Column:7},
                    },
                },
                Op:    0,
                Right: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"offset"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:10},
                        End:   parser.Location{Line:1, Column:16},
                    },
                },
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:3},
                End:   parser.Location{Line:1, Column:16},
            },
        },
        OptChain: false,
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:17},
    },
}
---

[TestParseExprNoErrors/Addition - 1]
&parser.Expr{
    Kind: &parser.EBinary{
        Left: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"a"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:2},
            },
        },
        Op:    0,
        Right: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"b"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:5},
                End:   parser.Location{Line:1, Column:6},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:6},
    },
}
---

[TestParseExprNoErrors/Call - 1]
&parser.Expr{
    Kind: &parser.ECall{
        Callee: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"foo"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:4},
            },
        },
        Args: {
            &parser.Expr{
                Kind: &parser.EIdentifier{Name:"a"},
                Span: parser.Span{
                    Start: parser.Location{Line:1, Column:5},
                    End:   parser.Location{Line:1, Column:6},
                },
            },
            &parser.Expr{
                Kind: &parser.EIdentifier{Name:"b"},
                Span: parser.Span{
                    Start: parser.Location{Line:1, Column:8},
                    End:   parser.Location{Line:1, Column:9},
                },
            },
            &parser.Expr{
                Kind: &parser.EIdentifier{Name:"c"},
                Span: parser.Span{
                    Start: parser.Location{Line:1, Column:11},
                    End:   parser.Location{Line:1, Column:12},
                },
            },
        },
        OptChain: false,
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:13},
    },
}
---

[TestParseExprNoErrors/UnaryOps - 1]
&parser.Expr{
    Kind: &parser.EBinary{
        Left: &parser.Expr{
            Kind: &parser.EUnary{
                Op:  0,
                Arg: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"a"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:2},
                        End:   parser.Location{Line:1, Column:3},
                    },
                },
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:2},
                End:   parser.Location{Line:1, Column:3},
            },
        },
        Op:    1,
        Right: &parser.Expr{
            Kind: &parser.EUnary{
                Op:  1,
                Arg: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"b"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:7},
                        End:   parser.Location{Line:1, Column:8},
                    },
                },
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:7},
                End:   parser.Location{Line:1, Column:8},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:2},
        End:   parser.Location{Line:1, Column:8},
    },
}
---

[TestParseExprNoErrors/Member - 1]
&parser.Expr{
    Kind: &parser.EMember{
        Object: &parser.Expr{
            Kind: &parser.EMember{
                Object: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"a"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:1},
                        End:   parser.Location{Line:1, Column:2},
                    },
                },
                Prop: &parser.Identifier{
                    Name: "b",
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:3},
                        End:   parser.Location{Line:1, Column:4},
                    },
                },
                OptChain: false,
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:4},
            },
        },
        Prop: &parser.Identifier{
            Name: "c",
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:4},
                End:   parser.Location{Line:1, Column:6},
            },
        },
        OptChain: true,
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:6},
    },
}
---

[TestParseExprNoErrors/OptChainCall - 1]
&parser.Expr{
    Kind: &parser.ECall{
        Callee: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"foo"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:4},
            },
        },
        Args: {
            &parser.Expr{
                Kind: &parser.EIdentifier{Name:"bar"},
                Span: parser.Span{
                    Start: parser.Location{Line:1, Column:6},
                    End:   parser.Location{Line:1, Column:9},
                },
            },
        },
        OptChain: true,
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:10},
    },
}
---

[TestParseExprNoErrors/MulAdd - 1]
&parser.Expr{
    Kind: &parser.EBinary{
        Left: &parser.Expr{
            Kind: &parser.EBinary{
                Left: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"a"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:1},
                        End:   parser.Location{Line:1, Column:2},
                    },
                },
                Op:    2,
                Right: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"b"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:5},
                        End:   parser.Location{Line:1, Column:6},
                    },
                },
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:6},
            },
        },
        Op:    0,
        Right: &parser.Expr{
            Kind: &parser.EBinary{
                Left: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"c"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:9},
                        End:   parser.Location{Line:1, Column:10},
                    },
                },
                Op:    2,
                Right: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"d"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:13},
                        End:   parser.Location{Line:1, Column:14},
                    },
                },
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:9},
                End:   parser.Location{Line:1, Column:14},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:14},
    },
}
---

[TestParseExprNoErrors/ArrayLiteral - 1]
&parser.Expr{
    Kind: &parser.EArray{
        Elems: {
            &parser.Expr{
                Kind: &parser.ENumber{Value:1},
                Span: parser.Span{
                    Start: parser.Location{Line:1, Column:2},
                    End:   parser.Location{Line:1, Column:3},
                },
            },
            &parser.Expr{
                Kind: &parser.ENumber{Value:2},
                Span: parser.Span{
                    Start: parser.Location{Line:1, Column:5},
                    End:   parser.Location{Line:1, Column:6},
                },
            },
            &parser.Expr{
                Kind: &parser.ENumber{Value:3},
                Span: parser.Span{
                    Start: parser.Location{Line:1, Column:8},
                    End:   parser.Location{Line:1, Column:9},
                },
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:10},
    },
}
---

[TestParseExprNoErrors/CallPrecedence - 1]
&parser.Expr{
    Kind: &parser.EBinary{
        Left: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"a"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:2},
            },
        },
        Op:    0,
        Right: &parser.Expr{
            Kind: &parser.ECall{
                Callee: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"foo"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:5},
                        End:   parser.Location{Line:1, Column:8},
                    },
                },
                Args: {
                    &parser.Expr{
                        Kind: &parser.EIdentifier{Name:"b"},
                        Span: parser.Span{
                            Start: parser.Location{Line:1, Column:9},
                            End:   parser.Location{Line:1, Column:10},
                        },
                    },
                },
                OptChain: false,
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:5},
                End:   parser.Location{Line:1, Column:11},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:11},
    },
}
---

[TestParseExprNoErrors/MulDiv - 1]
&parser.Expr{
    Kind: &parser.EBinary{
        Left: &parser.Expr{
            Kind: &parser.EBinary{
                Left: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"a"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:1},
                        End:   parser.Location{Line:1, Column:2},
                    },
                },
                Op:    3,
                Right: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"b"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:5},
                        End:   parser.Location{Line:1, Column:6},
                    },
                },
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:6},
            },
        },
        Op:    2,
        Right: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"c"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:9},
                End:   parser.Location{Line:1, Column:10},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:10},
    },
}
---

[TestParseExprNoErrors/CurriedCall - 1]
&parser.Expr{
    Kind: &parser.ECall{
        Callee: &parser.Expr{
            Kind: &parser.ECall{
                Callee: &parser.Expr{
                    Kind: &parser.ECall{
                        Callee: &parser.Expr{
                            Kind: &parser.EIdentifier{Name:"foo"},
                            Span: parser.Span{
                                Start: parser.Location{Line:1, Column:1},
                                End:   parser.Location{Line:1, Column:4},
                            },
                        },
                        Args: {
                            &parser.Expr{
                                Kind: &parser.EIdentifier{Name:"a"},
                                Span: parser.Span{
                                    Start: parser.Location{Line:1, Column:5},
                                    End:   parser.Location{Line:1, Column:6},
                                },
                            },
                        },
                        OptChain: false,
                    },
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:1},
                        End:   parser.Location{Line:1, Column:7},
                    },
                },
                Args: {
                    &parser.Expr{
                        Kind: &parser.EIdentifier{Name:"b"},
                        Span: parser.Span{
                            Start: parser.Location{Line:1, Column:8},
                            End:   parser.Location{Line:1, Column:9},
                        },
                    },
                },
                OptChain: false,
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:10},
            },
        },
        Args: {
            &parser.Expr{
                Kind: &parser.EIdentifier{Name:"c"},
                Span: parser.Span{
                    Start: parser.Location{Line:1, Column:11},
                    End:   parser.Location{Line:1, Column:12},
                },
            },
        },
        OptChain: false,
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:13},
    },
}
---

[TestParseExprErrorHandling/ExtraOperatorsInBinaryExpr - 1]
&parser.Expr{
    Kind: &parser.EBinary{
        Left: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"a"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:2},
            },
        },
        Op:    0,
        Right: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"b"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:7},
                End:   parser.Location{Line:1, Column:8},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:8},
    },
}
---

[TestParseExprErrorHandling/IncompleteCall - 1]
&parser.Expr{
    Kind: &parser.ECall{
        Callee: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"foo"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:4},
            },
        },
        Args: {
            &parser.Expr{
                Kind: &parser.EIdentifier{Name:"a"},
                Span: parser.Span{
                    Start: parser.Location{Line:1, Column:5},
                    End:   parser.Location{Line:1, Column:6},
                },
            },
            &parser.Expr{
                Kind: &parser.EIgnore{
                    Token: &parser.Token{
                        Data: &parser.TEOF{},
                        Span: parser.Span{
                            Start: parser.Location{Line:1, Column:7},
                            End:   parser.Location{Line:1, Column:7},
                        },
                    },
                },
                Span: parser.Span{
                    Start: parser.Location{Line:1, Column:7},
                    End:   parser.Location{Line:1, Column:7},
                },
            },
        },
        OptChain: false,
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:8},
    },
}
---

[TestParseExprErrorHandling/IncompleteMemberOptChain - 1]
&parser.Expr{
    Kind: &parser.EBinary{
        Left: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"a"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:2},
            },
        },
        Op:    0,
        Right: &parser.Expr{
            Kind: &parser.EMember{
                Object: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"b"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:5},
                        End:   parser.Location{Line:1, Column:6},
                    },
                },
                Prop: &parser.Identifier{
                    Name: "",
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:8},
                        End:   parser.Location{Line:1, Column:8},
                    },
                },
                OptChain: true,
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:5},
                End:   parser.Location{Line:1, Column:8},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:8},
    },
}
---

[TestParseExprErrorHandling/ExtraOperatorsInBinaryExpr - 2]
&parser.Error{
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:5},
        End:   parser.Location{Line:1, Column:6},
    },
    Message: "Unexpected token: 273",
}
---

[TestParseExprErrorHandling/IncompleteBinaryExpr - 1]
&parser.Expr{
    Kind: &parser.EBinary{
        Left: &parser.Expr{
            Kind: &parser.EBinary{
                Left: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"a"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:1},
                        End:   parser.Location{Line:1, Column:2},
                    },
                },
                Op:    1,
                Right: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"b"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:5},
                        End:   parser.Location{Line:1, Column:6},
                    },
                },
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:6},
            },
        },
        Op:    0,
        Right: &parser.Expr{
            Kind: &parser.EIgnore{
                Token: &parser.Token{
                    Data: &parser.TEOF{},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:8},
                        End:   parser.Location{Line:1, Column:8},
                    },
                },
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:8},
                End:   parser.Location{Line:1, Column:8},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:8},
    },
}
---

[TestParseExprErrorHandling/IncompleteCall - 2]
&parser.Error{
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:7},
        End:   parser.Location{Line:1, Column:7},
    },
    Message: "Unexpected token: 271",
}
---

[TestParseExprErrorHandling/IncompleteMemberOptChain - 2]
&parser.Error{
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:6},
        End:   parser.Location{Line:1, Column:8},
    },
    Message: "expected an identifier after ?.: 221",
}
---

[TestParseExprErrorHandling/IncompleteBinaryExpr - 2]
&parser.Error{
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:8},
        End:   parser.Location{Line:1, Column:8},
    },
    Message: "Unexpected token: 271",
}
---

[TestParseExprErrorHandling/IncompleteMember - 1]
&parser.Expr{
    Kind: &parser.EBinary{
        Left: &parser.Expr{
            Kind: &parser.EIdentifier{Name:"a"},
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:2},
            },
        },
        Op:    0,
        Right: &parser.Expr{
            Kind: &parser.EMember{
                Object: &parser.Expr{
                    Kind: &parser.EIdentifier{Name:"b"},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:5},
                        End:   parser.Location{Line:1, Column:6},
                    },
                },
                Prop: &parser.Identifier{
                    Name: "",
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:7},
                        End:   parser.Location{Line:1, Column:7},
                    },
                },
                OptChain: false,
            },
            Span: parser.Span{
                Start: parser.Location{Line:1, Column:5},
                End:   parser.Location{Line:1, Column:7},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:7},
    },
}
---

[TestParseExprErrorHandling/IncompleteMember - 2]
&parser.Error{
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:6},
        End:   parser.Location{Line:1, Column:7},
    },
    Message: "expected an identifier after .: 195",
}
---

[TestParseStmtNoErrors/ValDecl - 1]
&parser.Stmt{
    Kind: &parser.SDecl{
        Decl: &parser.Decl{
            Kind: &parser.DVariable{
                Kind: 0,
                Name: &parser.Identifier{
                    Name: "x",
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:5},
                        End:   parser.Location{Line:1, Column:6},
                    },
                },
                Init: &parser.Expr{
                    Kind: &parser.ENumber{Value:5},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:9},
                        End:   parser.Location{Line:1, Column:10},
                    },
                },
            },
            Export:  false,
            Declare: false,
            Span:    parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:10},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:10},
    },
}
---

[TestParseStmtNoErrors/VarDecl - 1]
&parser.Stmt{
    Kind: &parser.SDecl{
        Decl: &parser.Decl{
            Kind: &parser.DVariable{
                Kind: 1,
                Name: &parser.Identifier{
                    Name: "x",
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:5},
                        End:   parser.Location{Line:1, Column:6},
                    },
                },
                Init: &parser.Expr{
                    Kind: &parser.ENumber{Value:5},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:9},
                        End:   parser.Location{Line:1, Column:10},
                    },
                },
            },
            Export:  false,
            Declare: false,
            Span:    parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:10},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:10},
    },
}
---

[TestParseStmtNoErrors/DeclareValDecl - 1]
&parser.Stmt{
    Kind: &parser.SDecl{
        Decl: &parser.Decl{
            Kind: &parser.DVariable{
                Kind: 0,
                Name: &parser.Identifier{
                    Name: "x",
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:13},
                        End:   parser.Location{Line:1, Column:14},
                    },
                },
                Init: (*parser.Expr)(nil),
            },
            Export:  false,
            Declare: true,
            Span:    parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:14},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:14},
    },
}
---

[TestParseStmtNoErrors/ExportDeclareValDecl - 1]
&parser.Stmt{
    Kind: &parser.SDecl{
        Decl: &parser.Decl{
            Kind: &parser.DVariable{
                Kind: 0,
                Name: &parser.Identifier{
                    Name: "x",
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:20},
                        End:   parser.Location{Line:1, Column:21},
                    },
                },
                Init: (*parser.Expr)(nil),
            },
            Export:  true,
            Declare: true,
            Span:    parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:21},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:21},
    },
}
---

[TestParseStmtNoErrors/ExportValDecl - 1]
&parser.Stmt{
    Kind: &parser.SDecl{
        Decl: &parser.Decl{
            Kind: &parser.DVariable{
                Kind: 0,
                Name: &parser.Identifier{
                    Name: "x",
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:12},
                        End:   parser.Location{Line:1, Column:13},
                    },
                },
                Init: &parser.Expr{
                    Kind: &parser.ENumber{Value:5},
                    Span: parser.Span{
                        Start: parser.Location{Line:1, Column:16},
                        End:   parser.Location{Line:1, Column:17},
                    },
                },
            },
            Export:  true,
            Declare: false,
            Span:    parser.Span{
                Start: parser.Location{Line:1, Column:1},
                End:   parser.Location{Line:1, Column:17},
            },
        },
    },
    Span: parser.Span{
        Start: parser.Location{Line:1, Column:1},
        End:   parser.Location{Line:1, Column:17},
    },
}
---
